# libgcore

./: CMakeLists.txt  README.md
ext/glad/: CMakeLists.txt
ext/glad/include/glad/: gl.h  gles2.h
ext/glfw-3.4/examples/: triangle-opengles.c
include/gcore/gl/: element_buffer.hpp  render_state.hpp  shader_program.hpp  vertex_buffer.hpp
include/gcore/graphics/: camera.hpp  color.hpp  drawable.hpp  render_target.hpp  transformable.hpp
include/gcore/linalg/: vec2.hpp  vec3.hpp
include/gcore/window/: window.hpp
include/hexvel-graphics/gl/: element_buffer.hpp  gl_error.hpp  gl_resource.hpp  render_state.hpp  shader_program.hpp  vertex_buffer.hpp
include/hexvel-graphics/graphics/: camera.hpp  render_target.hpp  transformable.hpp
include/hexvel-graphics/linalg/: transform.hpp  vec2.hpp  vec2.inl  vec3.hpp  vec3.inl
include/hexvel-graphics/window/: window.hpp
src/gl/: element_buffer.cpp  gl_error.cpp  render_state.cpp  shader_program.cpp  vertex_buffer.cpp
src/graphics/: camera.cpp  color.cpp  render_target.cpp  transformable.cpp
src/linalg/: linalg.cpp  linalg.hpp  transform.cpp
src/window/: window.cpp  window_impl.hpp
src/window/glfw/: glfw_keyboard.cpp  glfw_keyboard.hpp  glfw_window_impl.cpp  glfw_window_impl.hpp
